<resources>
    <string name="app_name">GDGDevfest</string>
    <string name="VitText">VIT Vellore</string>
    <string name="devfest_16">DevFest\'16</string>
    <string name="gdg_vellore">Google Developers Group VIT Vellore</string>
    <string name="event_desp">This Devfest will witness two keynote speakers with more than 2 years industry experience along with 24 hours hackathon</string>
    <string name="speakers">Speakers</string>
    <string name="speaker_one">Manoranjan Padhy</string>
    <string name="speaker_one_desp">Social Media &amp; Community Manager, \nGoogle"</string>
    <string name="speaker_two">Ashish Rajput</string>
    <string name="speaker_two_desp">Co - Founder, Roder.in</string>
    <string name="guidelines">Guidelines</string>

    <string name="guidelines_one">Guidelines 1</string>
    <string name="guidelines_two">Guidelines 2</string>
    <string name="guidelines_three">Guidelines 3</string>

    <string name="contact_one">Contact 1</string>
    <string name="contact_two">Contact 2</string>
    <string name="contact">Contact 3</string>

    <string name="about_one">About 1</string>
    <string name="about_two">About 2</string>
    <string name="about_three">About 3</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordHint">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="GuestContinue">Continue as guest</string>
    <string name="team_members">Team members</string>
    <string name="hackathon_phase_1">Hackathon Phase 1</string>
    <string name="time">23:54:21</string>
    <string name="permission_request">You need audio permissions to ask questions from Mr Mojo</string>


    <string-array name="drawer_titles">
        <item>Timeline</item>
        <item>My Team</item>
        <item>Slot</item>
        <item>Coupons</item>
        <item>FAQs</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>
    <string-array name="drawer_titles_guest">
        <item>Timeline</item>
        <item>My Team</item>
        <item>Slot</item>
        <item>Coupons</item>
        <item>FAQs</item>
        <item>About</item>
        <item>LogIn</item>
    </string-array>
</resources>
