<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/textColor"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            >


            <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/emailHint"
            />
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            />


        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbackground"
            android:text="@string/SignIn"
            android:textColor="@color/white"
            />

            <TextView
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GuestContinue"
                android:textSize="15sp"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>




</LinearLayout>