<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/material_dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devfest_16"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:paddingTop="@dimen/activity_vertical_margin_24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gdg_vellore"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_desp"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin_24dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speakers"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingTop="4dp"/>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/speaker_dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/img_speakers_one"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/speaker_dp"
        android:layout_toEndOf="@+id/speaker_dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker_one"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker_one_desp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_toRightOf="@+id/speaker_dp"
        android:layout_centerInParent="true"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info_white_24dp"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

</RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/white"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"/>

    <RelativeLayout
        android:id="@+id/speaker_layout_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/speaker_two_dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/img_speaker_two"
            android:layout_margin="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/speaker_two_dp"
            android:layout_toEndOf="@+id/speaker_two_dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speaker_two"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speaker_two_desp"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_white_24dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
    </RelativeLayout>

</LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/layout"/>

        <ExpandableListView
            android:id="@+id/expanded_about_menu"
            android:layout_below="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>